<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('qualifications', function (Blueprint $table) {
            $table->id();

            $table->foreignId('dosen_id')
                ->constrained('dosens')
                ->cascadeOnDelete();

            $table->string('riwayat_pendidikan')->nullable();
            $table->string('jenjang_pendidikan')->nullable();
            $table->string('nama_perguruan_tinggi')->nullable();
            $table->string('bidang_keilmuan')->nullable();
            $table->year('tahun_lulus')->nullable();
            $table->string('jabatan')->nullable();
            $table->string('jabatan_fungsional')->nullable();

            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('qualifications');
    }
};
